update : 앨범 반환 시 - 가수 정보도 추가하여 반환하게 수정